syntax = "proto3";

package io.debezium.server.iceberg.rpc;

option go_package = "iceberg/proto";

service RecordIngestService {
  rpc SendRecords(IcebergPayload) returns (RecordIngestResponse);
}

message IcebergPayload {
  enum PayloadType {
    RECORDS = 0;
    COMMIT = 1;
    EVOLVE_SCHEMA = 2;
    DROP_TABLE = 3;
    GET_OR_CREATE_TABLE = 4;
    REFRESH_TABLE_SCHEMA = 5;
    REGISTER = 6;
    GET_FIELD_ID = 7;
  }

  PayloadType type = 1;

  message FileMetadata {
    string file_type = 1;
    string file_path = 2;
  }

  message Metadata {
    string dest_table_name = 1;
    string thread_id = 2;
    optional string identifier_field = 3;
    repeated SchemaField schema = 4;
    repeated FileMetadata file_metadata = 5;
    optional string field_name = 6;
  }

  message SchemaField {
    string ice_type = 1;
    string key = 2;
  }

  // OPTIMIZED: Replace google.protobuf.Value with typed fields
  message IceRecord {
    // Use oneof for efficient memory usage - only one field type active per record field
    message FieldValue {
      oneof value {
        string string_value = 1;
        int32 int_value = 2;
        int64 long_value = 3;
        float float_value = 4;
        double double_value = 5;
        bool bool_value = 6;
        bytes bytes_value = 7;
      }
    }

    repeated FieldValue fields = 1;
    string record_type = 2;  // "u", "c", "r"
  }

  Metadata metadata = 2;
  repeated IceRecord records = 3;
}

message RecordIngestResponse {
  string result = 1;
  bool success = 2;
}

service ArrowRecordIngestService {
  rpc UploadFile(ArrowFileUploadRequest) returns (ArrowFileUploadResponse);
  rpc GenerateFilename(ArrowFilenameRequest) returns (ArrowFilenameResponse);
}

message ArrowFileUploadRequest {
  string dest_table_name = 1;
  string thread_id = 2;
  bytes file_data = 3;
  string file_type = 4;        // "data" or "delete"
  string partition_key = 5;
  string filename = 6;
  int32 equality_field_id = 7;
}

message ArrowFileUploadResponse {
  string storage_path = 1;
  bool success = 2;
  string error = 3;
}

message ArrowFilenameRequest {
  string dest_table_name = 1;
  string thread_id = 2;
}

message ArrowFilenameResponse {
  string filename = 1;
  bool success = 2;
  string error = 3;
}
